added changes to application propeties

--- a/src/test/resources/application-unittest.properties
+++ b/src/test/resources/application-unittest.properties
@@ -1,31 +1,20 @@
-#elasticsearch.host=https://ktbywdohr5:frzodum2ow@jpay-test-6205074820.ap-southeast-2.bonsaisearch.net
-#elasticsearch.port=9300
-##elasticsearch.clustername=jpay_test
+spring.application.name=jpay-audit-service
 server.port=9020
-#elasticsearch.cluster-name=vgg-test
-elasticsearch.cluster-name=jpay_test
-elasticsearch.cluster-nodes=jpay-test-6205074820.ap-southeast-2.bonsaisearch.net:9300
-#elasticsearch.cluster-nodes: es1.mlnx.test.vggdev.com:9300,es3.mlnx.test.vggdev.com:9300,es2.mlnx.test.vggdev.com:9300
-
-spring.rabbitmq.host=skunk.rmq.cloudamqp.com
-spring.rabbitmq.port=5672
-spring.rabbitmq.virtual-host=eixsdvhr
-spring.rabbitmq.username=eixsdvhr
-spring.rabbitmq.password=PER4wt96wEEBJB2fjIUJ2gafUEd5gTET
-
-spring.cloud.stream.bindings.input.destination=auditEvents
-spring.cloud.stream.bindings.input.group=auditEvents
-
-#
-#spring.rabbitmq.host: rmq.mlnx.test.vggdev.com
-##154.113.17.188
-#spring.rabbitmq.port: 5672
-##virtual-host: finatech
-#spring.rabbitmq.username: vggdevops
-#spring.rabbitmq.password: RQ65exDEwzNuGF5q
-spring.cloud.stream.bindings.auditEvents.destination=auditEvents
-spring.cloud.stream.bindings.default-binder=application/json
-###
-#spring.data.elasticsearch.cluster-name=vgg-test
-#spring.data.elasticsearch.cluster-nodes=es1.mlnx.test.vggdev.com:9300,es3.mlnx.test.vggdev.com:9300,es2.mlnx.test.vggdev.com:9300
-#spring.data.elasticsearch.repositories.enabled=true
+#Unit Test/CI Environment Cluster Name Here#
+elasticsearch.cluster-name=
+#Unit Test/CI Environment Cluster Nodes Here#
+elasticsearch.cluster-nodes=
+#Unit Test/CI Environment Rabbit MQ Host Here#
+spring.rabbitmq.host=
+#Unit Test/CI Environment Rabbit MQ Port Here#
+spring.rabbitmq.port=
+#Unit Test/CI Environment Rabbit MQ virtual Host Here#
+spring.rabbitmq.virtual-host=
+#Unit Test/CI Environment Rabbit MQ username Here#
+spring.rabbitmq.username=
+#Unit Test/CI Environment Rabbit MQ password Here#
+spring.rabbitmq.password=
+#Unit Test/CI Environment Rabbit MQ queue name for the audits#
+rabbitmq.audit-queue-name=
+#Unit Test/CI Environment Rabbit MQ exchange name for the audits#
+rabbitmq.audit-exchange-name=
